Gallery fix, Image upload and stuff

--- a/Bodega.Web/Bodega.Web.csproj
+++ b/Bodega.Web/Bodega.Web.csproj
@@ -10,12 +10,18 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.2" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\Bodega.Dal\Bodega.Dal.csproj" />
     <ProjectReference Include="..\Bodega.Services\Bodega.Services.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Api\" />
   </ItemGroup>
 
 </Project>
